# pydantic-ai-rlm

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
examples/: needle_in_haystack.py  semantic_search.py
src/pydantic_ai_rlm/: __init__.py  agent.py  dependencies.py  models.py  prompts.py  repl.py  toolset.py  utils.py
